- closes #999, Issues with removing highlighting on snapshots. I've tried my best not to introduce any regressions in the process, but I may have. In any case, this should work much better now. - closes #1092, Defects with Sticky Note Annotations on the Wikipedia. We now put each annotation in its own iframe, eliminating CSS conflicts. - closes #593, invert highlight color when highlighted text has a black background - closes #588, Use single toolbar button for expand/collapse all annotations - fix warning that annotations may only be opened in one window when annotation is not open in any windows - fix annotation image oddities on OS X - move annotation HTML and CSS to separate files - add jsdoc documentation for annotate.js

--- a/chrome/skin/default/zotero/overlay.css
+++ b/chrome/skin/default/zotero/overlay.css
@@ -313,12 +313,7 @@
 
 #zotero-annotate-tb-collapse
 {
-	list-style-image: url('chrome://zotero/skin/annotate-collapse-all.png');
-}
-
-#zotero-annotate-tb-expand
-{
-	list-style-image: url('chrome://zotero/skin/annotate-expand-all.png');
+	list-style-image: url('chrome://zotero/skin/annotate-collapse.png');
 }
 
 #zotero-annotate-tb-highlight
